test/files/neg/t5265a.check
t5265a.scala:7: warning: [quick fix available] Implicit definition should have explicit type (inferred T[String])
  implicit val tsMissing = new T[String] {}   // warn val in trait
               ^
t5265a.scala:20: warning: [quick fix available] Implicit definition should have explicit type (inferred T[String])
  implicit val tsChild = new T[String] {}     // warn because inferred from RHS
               ^
t5265a.scala:22: warning: [quick fix available] Implicit definition should have explicit type (inferred Int)
  implicit private[this] val pChild = 42      // also warn
                             ^
t5265a.scala:27: warning: [quick fix available] Implicit definition should have explicit type (inferred Int)
  implicit private[this] val y = 42           // also warn
                             ^
t5265a.scala:25: warning: [quick fix available] Implicit definition should have explicit type (inferred T[String])
  implicit val tsD = new T[String] {}         // warn val in class
               ^
error: No warnings can be incurred under -Werror.
5 warnings
1 error
